--- a/Negocios.html
+++ b/Negocios.html
@@ -21,22 +21,21 @@
   <section id="nimage-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInLeft">
           <h1 class="display-4">Negocios Forestales</h1>
           <h1>para producción de celulosa</h1>
         </div>
       </div>
     </div>
   </section>
-
   <section id="benefits">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInUp">
          <h2 class="h2tittle">Beneficios de la Inversión Forestal</h2>
         </div>
         <div class="col-12">
-          <div class="gridbenefits">
+          <div class="gridbenefits wow fadeInLeft">
             <div class="item">
               <img src="assets/images/bosque2.svg" alt="Larrarte">
               <h2 class="mb-3">Tangibilidad</h2>
@@ -77,8 +76,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="display-5">Preguntas frecuentes</h1>
-          <div class="accordion" id="accordionExample">
+          <h1 class="display-5 wow fadeInDown">Preguntas frecuentes</h1>
+          <div class="accordion wow fadeInUp" id="accordionExample">
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -88,7 +87,6 @@
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   Una hectárea implantada con E.glóbulus/ maidenni con destino celulosa produce, en su primer corte a los diez años, unos 160 /180 metros cúbicos sólidos por hectárea.<br>Los siguientes cortes se realizan cada 9 años, los bosques bien manejados nos brindan madera por tres cortes, es decir, unos 26/30 años.<br>Un bosque de pino elliottii o pino taeda, con destino aserrado, implica turnos de espera más largos, pero también una mayor rentabilidad.<br>Es muy común producir en un mismo bosque madera para celulosa y madera para aserradero, ya sea trabajando con diferentes especies o con la misma, variando solamente los turnos de espera para el corte.<br>Todo rendimiento será determinado por el sitio forestal, por la semilla elegida, por la tecnología utilizada en la forestación y por el adecuado manejo forestal que recibe el bosque luego de la explotación.
-
                 </div>
               </div>
             </div>
@@ -145,7 +143,6 @@
       </div>
     </div>
   </section>
-
   <section id="contact"></section>
   <footer id="footer"></footer>
 <script type="text/javascript" src="assets/lib/jquery.min.js"></script>
