--- a/Administracion.html
+++ b/Administracion.html
@@ -19,7 +19,7 @@
   <section id="image-abanner">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInLeft">
           <h1>Administración integral de</h1>
           <h1 class="display-4">Negocios ganaderos</h1>
         </div>
@@ -29,7 +29,7 @@
   <section id="experience">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInUp">
           <h2>Contamos con una amplia experiencia en el rubro <br class="d-none d-md-block">administrativo, jurídico y de producción agropecuaria</h2>
         </div>
       </div>
@@ -38,8 +38,7 @@
   <section id="card-experience">
     <div class="container-fluid">
       <div class="row">
-
-        <div class="cexperience">
+        <div class="cexperience wow fadeInUp">
           <div class="card">
             <div class="row g-0">
               <div class="col-lg-6 col-12">
@@ -55,7 +54,7 @@
           </div>
         </div>
 
-        <div class="cexperience">
+        <div class="cexperience wow fadeInUp">
           <div class="card">
             <div class="row g-0 itrevert">
               <div class="col-lg-6 col-12">
@@ -70,7 +69,7 @@
             </div>
           </div>
         </div>
-        <div class="cexperience">
+        <div class="cexperience wow fadeInUp">
           <div class="card">
             <div class="row g-0">
               <div class="col-lg-6 col-12">
@@ -85,7 +84,7 @@
             </div>
           </div>
         </div>
-        <div class="cexperience">
+        <div class="cexperience wow fadeInUp">
           <div class="card">
             <div class="row g-0 itrevert">
               <div class="col-lg-6 col-12">
@@ -100,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="cexperience">
+        <div class="cexperience wow fadeInUp">
           <div class="card">
             <div class="row g-0">
               <div class="col-lg-6 col-12">
