--- a/PGA.html
+++ b/PGA.html
@@ -21,7 +21,7 @@
   <section id="image-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInLeft">
           <h1>Programa Ganadero Artigas</h1>
           <h1 class="display-4" style="font-weight: bold">Una forma segura de <br class="d-none d-md-block">invertir</h1>
         </div>
@@ -31,11 +31,11 @@
   <section id="dynamic-table">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInDown">
           <h5 class="text-center mb-5">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, <br class="d-none d-lg-block"> medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital.<br class="d-none d-lg-block"> Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas<br class="d-none d-lg-block">de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
       </div>
-      <div class="row" id="carouselcard">
+      <div class="row wow fadeInUp" id="carouselcard">
         <div class="col-lg-3 item pe-sm-0">
             <div class="card prueba">
               <ul class="list-group list-group-flush">
@@ -137,10 +137,10 @@
   <section id="scheme">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 wow fadeInLeft">
          <h1 class="display-5">Esquema de trabajo</h1>
         </div>
-        <div class="col-12">
+        <div class="col-12 wow fadeInRight">
           <div class="gridscheme">
             <div class="item"><h1 class="display-1">1</h1></div>
             <div class="item"><h5>Te registramos como inversor <!-- <br class="d-none d-md-block"> -->ante DICOSE y SNIG.</h5></div>
@@ -163,8 +163,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="display-5">Preguntas frecuentes</h1>
-          <div class="accordion" id="accordionExample">
+          <h1 class="display-5 wow fadeInDown">Preguntas frecuentes</h1>
+          <div class="accordion wow fadeInUp" id="accordionExample">
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
