--- a/Negocios.html
+++ b/Negocios.html
@@ -21,7 +21,7 @@
   <section id="nimage-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInLeft">
+        <div class="col-12 wow fadeInUp">
           <h1 class="display-4">Negocios Forestales</h1>
           <h1>para producción de celulosa</h1>
         </div>
@@ -35,7 +35,7 @@
          <h2 class="h2tittle">Beneficios de la Inversión Forestal</h2>
         </div>
         <div class="col-12">
-          <div class="gridbenefits wow fadeInLeft">
+          <div class="gridbenefits">
             <div class="item">
               <img src="assets/images/bosque2.svg" alt="Larrarte">
               <h2 class="mb-3">Tangibilidad</h2>
@@ -76,8 +76,8 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="display-5 wow fadeInDown">Preguntas frecuentes</h1>
-          <div class="accordion wow fadeInUp" id="accordionExample">
+          <h1 class="display-5 wow fadeInUp">Preguntas frecuentes</h1>
+          <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h4 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
