--- a/Negocios.html
+++ b/Negocios.html
@@ -21,7 +21,7 @@
   <section id="nimage-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInUp">
+        <div class="col-12 wow fadeInLeft">
           <h1 class="display-4">Negocios Forestales</h1>
           <h1>para producción de celulosa</h1>
         </div>
