--- a/Nosotros.html
+++ b/Nosotros.html
@@ -21,7 +21,7 @@
   <section id="image-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInUp">
+        <div class="col-12 wow fadeInLeft">
           <h1>Programa Ganadero Artigas</h1>
           <h1 class="display-4"><strong>Una forma segura de <br class="d-none d-md-block">invertir</strong></h1>
         </div>
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="mb-4 wow fadeInDown">Somos una empresa nacional dedicada a la Administración de fondos de inversión y capitales en general.</h2>
+          <h2 class="mb-4 wow fadeInUp">Somos una empresa nacional dedicada a la Administración de fondos de inversión y capitales en general.</h2>
           <h5>Contamos con un equipo de profesionales con amplia trayectoria en el mercado que respaldan nuestra labor día tras día. En Grupo Larrarte garantizamos solidez y transparencia a través de nuestras plataformas de inversión con rentabilidades seguras, brindando absoluta confianza a nuestros clientes e inversores. Trabajamos en los principales sectores de Uruguay, como lo es la Forestación, Ganadería y Construcción. De esta forma logramos un servicio integral para la diversificación de capitales.</h5>
         </div>
       </div>
