--- a/Administracion.html
+++ b/Administracion.html
@@ -19,7 +19,7 @@
   <section id="image-abanner">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInUp">
+        <div class="col-12 wow fadeInLeft">
           <h1>Administración integral de</h1>
           <h1 class="display-4">Negocios ganaderos</h1>
         </div>
