--- a/PGA.html
+++ b/PGA.html
@@ -21,7 +21,7 @@
   <section id="image-banner">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInUp">
+        <div class="col-12 wow fadeInLeft">
           <h1>Programa Ganadero Artigas</h1>
           <h1 class="display-4" style="font-weight: bold">Una forma segura de <br class="d-none d-md-block">invertir</h1>
         </div>
@@ -31,7 +31,7 @@
   <section id="dynamic-table">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 wow fadeInDown">
+        <div class="col-12 wow fadeInUp">
           <h5 class="text-center mb-5">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, <br class="d-none d-lg-block"> medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital.<br class="d-none d-lg-block"> Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas<br class="d-none d-lg-block">de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
       </div>
