--- a/Administracion.html
+++ b/Administracion.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="preload" href="assets/styles/css/fonts.css" as="style"/>
   <link rel="preload" href="assets/lib/bootstrap/bootstrap.min.css" as="style">
   <link rel="preload" href="assets/lib/animate.min.css" as="style">
   <link rel="preload" href="assets/styles/css/bundle.min.css" as="style"/>
+  <link rel="stylesheet" href="assets/styles/css/fonts.css"/>
   <link rel="stylesheet" href="assets/lib/owl-carousel/owl-carousel.min.css">
   <link rel="stylesheet" href="assets/lib/owl-carousel/owl-theme.default.min.css">
   <link rel="stylesheet" href="assets/lib/bootstrap/bootstrap.min.css">
