--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   <section id="group">
     <div class="container">
       <div class="row">
-        <div class="col-12 wow fadeInUp">
+        <div class="col-12">
           <img src="assets/images/group-larrarte.svg" alt="Larrarte" class="img-fluid">
-          <h2 class="mt-5 mb-5" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
-          <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
+          <h2 class="mt-5 mb-5 wow fadeInUp" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
+          <h5 class="wow fadeInUp" style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="gif wow fadeInUp">
+          <div class="gif">
             <div class="item">
               <img src="assets/images/certificacion.svg" alt="Larrarte" class="certificacion">
               <h4>25 años <br>de experiencia</h4>
