--- a/Nosotros.html
+++ b/Nosotros.html
@@ -45,24 +45,30 @@
          <h2>Nuestras Cabañas</h2>
         </div>
         <div class="col-lg-4 col-12 ccabins">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card">
+            <div class="card-head">
+              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+            </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-12 ccabins">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card">
+            <div class="card-head">
+              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+            </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-12 ccabins">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card">
+            <div class="card-head">
+              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+            </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
             </div>
