--- a/Nosotros.html
+++ b/Nosotros.html
@@ -47,7 +47,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+              <img src="" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
@@ -57,7 +57,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+              <img src="" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
@@ -67,7 +67,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="assets/images/director-Valentin.jpg" class="card-img-top" alt="Larrarte">
+              <img src="" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
