--- a/nosotros.html
+++ b/nosotros.html
@@ -33,7 +33,8 @@
       <div class="row">
         <div class="col-12">
           <h2 class="mb-4 wow fadeInUp">Somos una empresa nacional dedicada a la Administración de fondos de inversión y capitales en general.</h2>
-          <h5>Contamos con un equipo de profesionales con amplia trayectoria en el mercado que respaldan nuestra labor día tras día. En Grupo Larrarte garantizamos solidez y transparencia a través de nuestras plataformas de inversión con rentabilidades seguras, brindando absoluta confianza a nuestros clientes e inversores. Trabajamos en los principales sectores de Uruguay, como lo es la Forestación, Ganadería y Construcción. De esta forma logramos un servicio integral para la diversificación de capitales.</h5>
+          <h5 class="mb-3">Contamos con un equipo de profesionales con amplia trayectoria en el mercado que respaldan nuestra labor día tras día. En Grupo Larrarte garantizamos solidez y transparencia a través de nuestras plataformas de inversión con rentabilidades seguras, brindando absoluta confianza a nuestros clientes e inversores.</h5>
+          <h5>Trabajamos en los principales sectores de Uruguay, como lo es la Forestación, Ganadería y Construcción. De esta forma logramos un servicio integral para la diversificación de capitales.</h5>
         </div>
       </div>
     </div>
