--- a/pga.html
+++ b/pga.html
@@ -83,7 +83,7 @@
               <h4 style="color: #FFFFFF">Categoría<br>Cría</h4>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item p-3">
                 <h1 style="color: #0B422F">4,2% al 8.5%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
@@ -101,7 +101,7 @@
               <h4 style="color: #FFFFFF">Categoría<br>Re-cría</h4>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item p-3">
                 <h1 style="color: #0B422F">4,2% al 8.5%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
@@ -119,7 +119,7 @@
               <h4 style="color: #FFFFFF">Categoría<br>Gordo e invernada</h4>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
+              <li class="list-group-item p-3">
                 <h1 style="color: #0B422F">9%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
