--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="ibottom">
               <h3>Rentabilidad asegurada <br>del 8 a 10% anual</h3>
             </div>
-            <a href="/pga.html" class="btn btn-primary">Conocer más</a>
+            <a href="pga.html" class="btn btn-primary">Conocer más</a>
           </div>
           <div class="Negocios investment">
             <div class="itop">
@@ -115,7 +115,7 @@
             <div class="ibottom">
               <h3>Rentabilidad del<br> 7 a 12% anual</h3>
             </div>
-            <a href="/negocios.html" class="btn btn-primary">Conocer más</a>
+            <a href="negocios.html" class="btn btn-primary">Conocer más</a>
           </div>
           <div class="Construccion investment">
             <div class="itop">
@@ -125,7 +125,7 @@
             <div class="ibottom">
               <h3>Rentabilidad hasta<br> del 9% anual</h3>
             </div>
-            <a href="#" class="btn btn-primary">Conocer más</a>
+            <a href="administracion.html" class="btn btn-primary">Conocer más</a>
           </div>
         </div>
       </div>
