--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header id="header"></header>
-  <section id="image-banner">
+  <section id="image-usbanner">
     <div class="container">
       <div class="row">
         <div class="col-12 wow fadeInLeft">
@@ -48,7 +48,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="" class="card-img-top" alt="Larrarte">
+              <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
@@ -58,7 +58,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="" class="card-img-top" alt="Larrarte">
+              <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
@@ -68,7 +68,7 @@
         <div class="col-lg-4 col-12 ccabins">
           <div class="card">
             <div class="card-head">
-              <img src="" class="card-img-top" alt="Larrarte">
+              <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
               <a href="#" class="btn btn-primary">Ver más</a>
