--- a/nosotros.html
+++ b/nosotros.html
@@ -51,7 +51,7 @@
               <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#contact" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
               <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#contact" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
               <img src="assets/images/el-roble.png" class="card-img-top" alt="Larrarte">
             </div>
             <div class="card-body">
-              <a href="#" class="btn btn-primary">Ver más</a>
+              <a href="#contact" class="btn btn-primary">Ver más</a>
             </div>
           </div>
         </div>
