--- a/pga.html
+++ b/pga.html
@@ -93,7 +93,7 @@
               <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
-          <a href="#" class="btn btn-primary">Me interesa</a>
+          <a href="#contact" class="btn btn-primary">Me interesa</a>
         </div>
         <div class="col-lg-3 item">
           <div class="card" style="text-align: center;">
@@ -111,7 +111,7 @@
               <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
-          <a href="#" class="btn btn-primary">Me interesa</a>
+          <a href="#contact" class="btn btn-primary">Me interesa</a>
         </div>
         <div class="col-lg-3 item">
           <div class="card" style="text-align: center;">
@@ -129,7 +129,7 @@
               <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
-          <a href="#" class="btn btn-primary">Me interesa</a>
+          <a href="#contact" class="btn btn-primary">Me interesa</a>
         </div>
       </div>
     </div>
