--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br class="d-none d-md-block"> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
+          <a href="#contact" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
@@ -33,7 +33,7 @@
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
+          <a href="#contact" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
       <div class="item">
@@ -41,7 +41,7 @@
         <div class="titleCarousel">
           <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
           <h1 class="mb-5 fb">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
+          <a href="#contact" class="btn btn-primary">Conocer más</a>
         </div>
       </div>
     </div>
@@ -150,7 +150,7 @@
               <img src="assets/images/for-sale.svg" alt="Larrarte">
               <h4>Inmobiliaria Agro</h4>
             </div>
-            <a href="#" class="btn btn-primary">Conocer más</a>
+            <a href="#contact" class="btn btn-primary">Conocer más</a>
           </div>
         </div>
       </div>
